[package]
name = "substreams-template"
version = "0.1.0"
description = "Substream template demo project"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-template"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
wasm-bindgen = "0.2.79"
prost = "0.11.0"
prost-types = "0.11.0"
hex = "0.4.3"
substreams = "^0.5.0"
substreams-ethereum = "0.8.0"
substreams-entity-change = "0.3.0"
num-bigint = "0.4"
bigdecimal = "0.3"

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.8.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"