[package]
name = "graph_network_substreams"
version = "0.1.0"
description = "Graph Protocol Substreams backed Subgraph"
edition = "2021"
repository = "https://github.com/graphops/graph-network-substreams"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0.0"
wasm-bindgen = "0.2.79"
prost = "0.11.0"
prost-types = "0.11.0"
hex = "0.4.3"
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-entity-change = "1.3.0"
num-bigint = "0.4"
bigdecimal = "0.4.1"
tiny-keccak = "2.0.2"
base58 = "0.2.0"

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"